--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <nav id="nav">
                 <ul>
                     <li><a href="#inicio" onclick="selecionar()">INÍCIO</a></li>
-                    <li><a href="#sobremi" onclick="selecionar()">SOBRE MIM</a></li>
+                    <li><a href="#sobremi" onclick="selecionar()">SOBRE EU</a></li>
                     <li><a href="#skills" onclick="selecionar()">HABILIDADES</a></li>
                     <li><a href="#curriculum" onclick="selecionar()">CURRÍCULO</a></li>
                     <li><a href="#portfolio" onclick="selecionar()">PORTFÓLIO</a></li>
