--- a/index.html
+++ b/index.html
@@ -72,18 +72,15 @@
                             <strong>Data de Nascimento</strong>
                             07-11-2000
                         </li>
-                        <li>
-                            <strong>Telefone</strong>
-                            (38) 9 8807-7492
-                        </li>
+                        
                         <li>
                             <strong>E-mail</strong>
-                            kennedy.franklin9@gmail.com
+                            exemplo@gmail.com
                         </li>
 
                         <li>
                             <strong>Endereço</strong>
-                            Montes Claros - MG
+                            Rua do bobo - MG
                         </li>
 
                     </ul>
