--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
     </section>
 
     <!-- SECCION CONTACTO -->
-    <section id="contacto" class="contacto">
+    <section id="contato" class="contacto">
         <div class="contenido-seccion">
             <h2>CONTATO</h2>
             <div class="fila">
